--- a/14 军事责任.md
+++ b/14 军事责任.md
@@ -1,11 +1,15 @@
 # 14 军事责任
 君主关于军事方面的责任
 
-君主除了战争、军事制度和训练之外，不应该有其他的目标、其他的思想，也不应该把其他事情作为自己的专业，因为这是进行统帅的人应有的唯一的专业①。它的效力②不仅能够使那些生下来就当君主的人保持地位，而且有许多次使人们从老百姓的地位一跃而高踞王位。反之，大家都知道，君主沉醉于安逸比对关心军事想得更多便亡国。亡国的头一个原因就是忽视这种专业，而使你赢得一个国家的原因，就是因为你精通这门专业。
+>君主除了战争、军事制度和训练之外，不应该有其他的目标、其他的思想，也不应该把其他事情作为自己的专业，因为这是进行统帅的人应有的唯一的专业①。它的效力②不仅能够使那些生下来就当君主的人保持地位，而且有许多次使人们从老百姓的地位一跃而高踞王位。反之，大家都知道，君主沉醉于安逸比对关心军事想得更多便亡国。亡国的头一个原因就是忽视这种专业，而使你赢得一个国家的原因，就是因为你精通这门专业。
+
+君主除了战争、军事制度和训练之外，不应该有其他的目标、其他的思想，也不应该把其他事情作为自己的专业，因为这是统帅的人应有的唯一的专业①。它的效力②不仅能够使那些生下来就当君主的人保持地位，而且有许多次使人们从老百姓的地位一跃而高踞王位。反之，大家都知道，君主沉醉于安逸比对关心军事想得更多便亡国。亡国的头一个原因就是忽视这种专业，而使你赢得一个国家的原因，就是因为你精通这门专业。
 
 >①这是有意夸张的表达，但是它符合马基雅维里的一个观点，根据这个观点，君主可以(甚至应该)将民事管理工作交给自己选择的地方官，而自己绝对地掌握战争事务。
 
 >②此处“效力”原文为“virtù”，但是在这里的意义与马基雅维里著作中通常使用的“能力”的意义不同，而是具有中世纪使用的意义。
+
+>弗朗切斯科·斯福尔扎由于讲求军事，于是由平民一跃而为米兰的公爵；而他的孩子们③由于躲避军事的困苦，于是由公爵降为平民。因为不整军经武，就使得人们蔑视你，这是君主必须提防的奇耻大辱之一。这一点容后说明，因为武装起来的人同没有武装起来的人是无法比较的。指望一个已经武装起来的人心甘情愿服从那个没有武装起来的人，或者没有武装的人厕身于已经武装起来的臣仆之中能够安安稳稳，这是不符合情理的。因为一方抱着蔑视的态度，他方抱着猜疑，这两者是不可能好好地相处共事的。所以，一个君主如果不懂军事，除了已经提到的其他不幸之外，他既不能获得自己的士兵的尊敬，而自己也不能够信赖他们。
 
 弗朗切斯科·斯福尔扎由于讲求军事，于是由平民一跃而为米兰的公爵；而他的孩子们③由于躲避军事的困苦，于是由公爵降为平民。因为不整军经武，就使得人们蔑视你，这是君主必须提防的奇耻大辱之一。这一点容后说明，因为武装起来的人同没有武装起来的人是无法比较的。指望一个已经武装起来的人心甘情愿服从那个没有武装起来的人，或者没有武装的人厕身于已经武装起来的臣仆之中能够安安稳稳，这是不符合情理的。因为一方抱着蔑视的态度，他方抱着猜疑，这两者是不可能好好地相处共事的。所以，一个君主如果不懂军事，除了已经提到的其他不幸之外，他既不能获得自己的士兵的尊敬，而自己也不能够信赖他们。
 
