--- a/03 混合君主国.md
+++ b/03 混合君主国.md
@@ -101,9 +101,9 @@
 
 > [10]皮奥姆比诺(Piombino)的统治者是贾科莫·德·阿皮亚诺(Giacomod’Appiano)，雇佣军队长。
 
-> 试细想一下：如果法国国王遵守我在上面所说的规则，牢牢地维系着他所有的朋友并且给以保护的话，那么，他要保持自己在意大利的威望又有什么困难呢！因为他们虽然为数众多，可是既弱小又胆怯，有的害怕教廷，有的害怕威尼斯人，①因此他们总是不得不紧跟法国国王，从而他只要借助他们就能够轻而易举地使自己稳如泰山对抗那些仍然是强大的势力。可是他一进入米兰却反其道而行之；他反而援助教皇亚历山大占据罗马尼阿，②他永远没有想到，由于此项决策使他失去了朋友和那些原来投靠他保护的人们，他削弱了自己的势力；而另一方面，教廷由于宗教权力本身就获得很大的权威，现在法国国王又给他增加了巨大的世俗权力，于是势力大增。法国国王犯了头一个错误之后，不得不继续错下去，直到最后为了抑制亚历山大的野心，以及为了阻止他成为托斯卡纳的统治者，他甚至不得不亲自跑到意大利去。①他使教廷的势力大增并且失去了一些朋友却好象还不够似的，他一心垂涎那波利王国，便同西班牙国王分割这个王国。②他原先是意大利的主宰，可是现在他带来一个伙伴，于是那个地方的野心家和心怀不满的人们在那里有申诉的地方了。而且他本来可以让一个向他纳贡的人③留在那个王国为王，可是他却把他撵走，而带来另一个人——一个能够把自己赶走的人。
+> 试细想一下：如果法国国王遵守我在上面所说的规则，牢牢地维系着他所有的朋友并且给以保护的话，那么，他要保持自己在意大利的威望又有什么困难呢！因为他们虽然为数众多，可是既弱小又胆怯，有的害怕教廷，有的害怕威尼斯人，①因此他们总是不得不紧跟法国国王，从而他只要借助他们就能够轻而易举地使自己稳如泰山对抗那些仍然是强大的势力。可是他一进入米兰却反其道而行之；他反而援助教皇亚历山大占据罗马尼阿，②他永远没有想到，由于此项决策使他失去了朋友和那些原来投靠他保护的人们，他削弱了自己的势力；而另一方面，教廷由于宗教权力本身就获得很大的权威，现在法国国王又给他增加了巨大的世俗权力，于是势力大增。法国国王犯了头一个错误之后，不得不继续错下去，直到最后为了抑制亚历山大的野心，以及为了阻止他成为托斯卡纳的统治者，他甚至不得不亲自跑到意大利去。①他使教廷的势力大增并且失去了一些朋友却好像还不够似的，他一心垂涎那波利王国，便同西班牙国王分割这个王国。②他原先是意大利的主宰，可是现在他带来一个伙伴，于是那个地方的野心家和心怀不满的人们在那里有申诉的地方了。而且他本来可以让一个向他纳贡的人③留在那个王国为王，可是他却把他撵走，而带来另一个人——一个能够把自己赶走的人。
 
-试细想一下，如果法国国王遵守我在上面所说的规则，牢牢地维系着他所有的朋友并且给以保护的话，那么，他要保持自己在意大利的威望又有什么困难呢！因为他们虽然为数众多，可是既弱小又胆怯，有的害怕教廷，有的害怕威尼斯人，①因此他们总是不得不紧跟法国国王，从而他只要借助他们就能够轻而易举地使自己稳如泰山对抗那些仍然是强大的势力。可是他一进入米兰却反其道而行之；他反而援助教皇亚历山大占据罗马尼阿，②他永远没有想到，由于此项决策使他失去了朋友和那些原来投靠他保护的人们，他削弱了自己的势力；而另一方面，教廷由于宗教权力本身就获得很大的权威，现在法国国王又给他增加了巨大的世俗权力，于是势力大增。法国国王犯了头一个错误之后，不得不继续错下去，直到最后为了抑制亚历山大的野心，以及为了阻止他成为托斯卡纳的统治者，他甚至不得不亲自跑到意大利去。①他使教廷的势力大增并且失去了一些朋友却好象还不够似的，他一心垂涎那波利王国，便同西班牙国王分割这个王国。②他原先是意大利的主宰，可是现在他带来一个伙伴，于是那个地方的野心家和心怀不满的人们在那里有申诉的地方了。而且他本来可以让一个向他纳贡的人③留在那个王国为王，可是他却把他撵走，而带来另一个人——一个能够把自己赶走的人。
+试细想一下，如果法国国王遵守我在上面所说的规则，牢牢地维系着他所有的朋友并且给以保护的话，那么，他要保持自己在意大利的威望又有什么困难呢！因为他们虽然为数众多，可是既弱小又胆怯，有的害怕教廷，有的害怕威尼斯人，①因此他们总是不得不紧跟法国国王，从而他只要借助他们就能够轻而易举地使自己稳如泰山对抗那些仍然是强大的势力。可是他一进入米兰却反其道而行之；他反而援助教皇亚历山大占据罗马尼阿，②他永远没有想到，由于此项决策使他失去了朋友和那些原来投靠他保护的人们，他削弱了自己的势力；而另一方面，教廷由于宗教权力本身就获得很大的权威，现在法国国王又给他增加了巨大的世俗权力，于是势力大增。法国国王犯了头一个错误之后，不得不继续错下去，直到最后为了抑制亚历山大的野心，以及为了阻止他成为托斯卡纳的统治者，他甚至不得不亲自跑到意大利去。①他使教廷的势力大增并且失去了一些朋友却好像还不够似的，他一心垂涎那波利王国，便同西班牙国王分割这个王国。②他原先是意大利的主宰，可是现在他带来一个伙伴，于是那个地方的野心家和心怀不满的人们在那里有申诉的地方了。而且他本来可以让一个向他纳贡的人③留在那个王国为王，可是他却把他撵走，而带来另一个人——一个能够把自己赶走的人。
 
 >①罗马教廷和威尼斯在十四世纪末叶，通过势力扩张，变成意大利的两个最大的强国。②教皇亚历山大，原名罗德里戈·博尔贾(RodrigoBorgia，1431—1503)，通过贿赂当选为教皇亚历山大六世(AlesandroⅥ在位：1492—1503)，使教皇政权日益世俗化；他还通过其私生子切萨雷·博尔贾(即著名的瓦伦蒂诺公爵)以教廷保护人的资格，把意大利的罗马尼阿(Romagna)置于教廷的直接统治之下。但事实上，瓦伦蒂诺公爵企图将它变为自己的国家。
 
