--- a/06 论自己武力和能力.md
+++ b/06 论自己武力和能力.md
@@ -2,7 +2,7 @@
 
 论依靠自己的武力和能力获得的新君主国
 
->当论述君主和国家都是全新的君主国的时候，我援引最重大的事例，任何人都不应该感到惊异。因为人们几乎常在他人走过的道路上走，并且效法他人的事迹，虽然他们并不能够完完全全地沿着别人的道路或者不能够取得他们所效法的人的功效。然而一个明智的人总是应该追踪伟大人物所走过的道路的，并且效法那些已经成为最卓越的人们。这样一来，即使自己的能力达不到他们那样强，但是至少会带有几分气派。他要象那些聪明的射手那样行事，当他们察觉想要射击的目标看来距离太远，同时知道自己的弓力所能及的限度，他们瞄准时就比目标抬高一些，这并不是想把自己的箭头射到那样高的地方去，而是希望由于瞄准得那样高，就能够射中他想要射的目标。
+>当论述君主和国家都是全新的君主国的时候，我援引最重大的事例，任何人都不应该感到惊异。因为人们几乎常在他人走过的道路上走，并且效法他人的事迹，虽然他们并不能够完完全全地沿着别人的道路或者不能够取得他们所效法的人的功效。然而一个明智的人总是应该追踪伟大人物所走过的道路的，并且效法那些已经成为最卓越的人们。这样一来，即使自己的能力达不到他们那样强，但是至少会带有几分气派。他要像那些聪明的射手那样行事，当他们察觉想要射击的目标看来距离太远，同时知道自己的弓力所能及的限度，他们瞄准时就比目标抬高一些，这并不是想把自己的箭头射到那样高的地方去，而是希望由于瞄准得那样高，就能够射中他想要射的目标。
 
 当论述君主和国家都是全新的时候，我引用最重大的事例，任何人都不应该感到惊异。因为人们几乎常在他人走过的道路上走，并且效法他人的事迹，虽然他们并不能够完完全全地沿着别人的道路或者不能够取得他们所效法的人的功效。然而一个明智的人总是应该追随伟大人物所走过的道路，并且效法那些已经成为最卓越的人们。这样一来，即使自己的能力达不到他们那样强，但是至少会带有几分气派。他要像聪明的射手那样行事，当他们察觉目标看来距离太远，同时知道弓力所能及的限度，他们瞄准时就比目标抬高一些，这并不是想把自己的箭头射到那样高的地方去，而是希望由于瞄准得那样高，就能够射中目标。
 
@@ -38,9 +38,9 @@
 
 如果我们想透彻地探讨这件事情，那就必须研究这些革新者是依靠自己还是倚靠他人；换句话说，为着实现其鸿图大略，他们必须恳求人们，抑或是使用强迫的方法；在第一种场合，结果总是恶劣的，并且永远不会取得什么成就。但是如果他们依靠自己并且能够采取强迫的方法，他们就罕有危险。所以，所有武装的先知都获得胜利，而非武装的先知都失败了。因为，除了上述理由之外，人民的性情是容易变化的；关于某件事要说服人们是容易的，可是要他们对于说服的意见坚定不移，那就困难了。因此事情必须这样安排：当人们不再信仰的时候，就依靠武力迫使他们就范。
 
->假使摩西、居鲁士、提修斯和罗慕洛不曾拿起武器，他们就不能够使人长时期地遵守他们的戒律，正如我们这个时代的季罗拉莫·萨沃纳罗拉修道士①的遭遇一样。当大众一旦不再相信他的时候，他就同他的新制度一起被毁灭了，因为他既没有办法使那些曾经信仰他的人们坚定信仰，也没有办法使那些不信仰的人们信仰。所以，象这样的人物，在行动中有着巨大的困难。他们的一切艰险就在前进的道路上。他们必须运用力量加以克服，而一旦克服了困难，他们就会开始受到人们的尊敬，当他们消灭了那些对他们的高位嫉妒的人们之后，他们就能够继续享有权势、安全、尊荣和幸福了。
+>假使摩西、居鲁士、提修斯和罗慕洛不曾拿起武器，他们就不能够使人长时期地遵守他们的戒律，正如我们这个时代的季罗拉莫·萨沃纳罗拉修道士①的遭遇一样。当大众一旦不再相信他的时候，他就同他的新制度一起被毁灭了，因为他既没有办法使那些曾经信仰他的人们坚定信仰，也没有办法使那些不信仰的人们信仰。所以，像这样的人物，在行动中有着巨大的困难。他们的一切艰险就在前进的道路上。他们必须运用力量加以克服，而一旦克服了困难，他们就会开始受到人们的尊敬，当他们消灭了那些对他们的高位嫉妒的人们之后，他们就能够继续享有权势、安全、尊荣和幸福了。
 
-假使摩西、居鲁士、提修斯和罗慕洛不曾拿起武器，他们就不能够使人长时期地遵守他们的戒律，正如我们这个时代的季罗拉莫·萨沃纳罗拉修道士①的遭遇一样。当大众一旦不再相信他的时候，他就同他的新制度一起被毁灭了，因为他既没有办法使那些曾经信仰他的人们坚定信仰，也没有办法使那些不信仰的人们信仰。所以，象这样的人物，在行动中有着巨大的困难。他们的一切艰险就在前进的道路上。他们必须运用力量加以克服，而一旦克服了困难，他们就会开始受到人们的尊敬，当他们消灭了那些对他们的高位嫉妒的人们之后，他们就能够继续享有权势、安全、尊荣和幸福了。
+假使摩西、居鲁士、提修斯和罗慕洛不曾拿起武器，他们就不能够使人长时期地遵守他们的戒律，正如我们这个时代的季罗拉莫·萨沃纳罗拉修道士①的遭遇一样。当大众一旦不再相信他的时候，他就同他的新制度一起被毁灭了，因为他既没有办法使那些曾经信仰他的人们坚定信仰，也没有办法使那些不信仰的人们信仰。所以，像这样的人物，在行动中有着巨大的困难。他们的一切艰险就在前进的道路上。他们必须运用力量加以克服，而一旦克服了困难，他们就会开始受到人们的尊敬，当他们消灭了那些对他们的高位嫉妒的人们之后，他们就能够继续享有权势、安全、尊荣和幸福了。
 
 >①季罗拉莫·萨沃纳罗拉修道士(GirolamoSavonarola，1452—1498)，佛罗伦萨宗教改革家。1475年为多米尼加会修道士。五年后进佛罗    伦萨圣马尔科修道院传教，抨击当时教会和教士腐化堕落，主张改革和复兴宗教，并建立一个有效的共和政府。1491年萨沃纳罗拉成为圣    马尔科院长，对佛罗伦萨政治影响日增。1494年，自梅迪奇家族被驱逐出佛罗伦萨后，萨沃纳罗拉掌握了佛罗伦萨的支配权，主持制定    1494年宪法；至1497年为其全盛时期。但为教皇亚历山大四世所敌视，其势力骤然削弱，1498年作为异端者被捕，并被烧死。
 
