--- a/07 论他人武力和幸运.md
+++ b/07 论他人武力和幸运.md
@@ -4,7 +4,7 @@
 
 那些光靠幸运，从平民崛起成为君主的人们，在发迹时并不很辛苦劳瘁，但是保持其地位时就很辛苦劳瘁了。当他们在途中的时候并没有任何困难，因为他们是在那里飞翔。可是等到他们落脚之后，一切困难就应运而生了。那些依靠金钱或者由于他人的恩惠赐与而获得某一国家的人们就是这样的人。在希腊的伊奥尼亚和赫莱斯蓬等城市，就有许多这样的事例。在这些城市里，他们是由大流士立为君主的，为的是使他们为着大流士的安全和荣誉而保有这些城市。还有那些依靠收买军队，从平民跃登宝座的皇帝们亦复如此。
 
-这些统治者都是单纯依靠别人承认自己掌权的好意和幸运。而这两者都是变化无常、毫不稳定的。这类人既不懂得怎样去保持而且也不可能保持他们的地位。他们之所以不懂得，因为除非他们是具有卓越才智和能力的人，我们没有理由期望那些先前常常过着平民生活的人们懂得怎样发号施令；他们之所以不能够保有国家，因为他们不是拥有对自己友好的和忠诚的武力。再说，遽然勃兴的国家，如同自然界迅速滋生长大的其他一切东西一样，不能够根深蒂固、枝桠交错，一旦遇到一场狂风暴雨就把它摧毁了。除非象刚才说过的，那些突然之间一跃而为君主的人们是很有能力的人，他们知道必须立即作好准备保持由幸运投到他们怀中之物，并且在当上国王以后奠定基础——这些基础在他人说来是在作为国王之前就已经奠定了的。
+这些统治者都是单纯依靠别人承认自己掌权的好意和幸运。而这两者都是变化无常、毫不稳定的。这类人既不懂得怎样去保持而且也不可能保持他们的地位。他们之所以不懂得，因为除非他们是具有卓越才智和能力的人，我们没有理由期望那些先前常常过着平民生活的人们懂得怎样发号施令；他们之所以不能够保有国家，因为他们不是拥有对自己友好的和忠诚的武力。再说，遽然勃兴的国家，如同自然界迅速滋生长大的其他一切东西一样，不能够根深蒂固、枝桠交错，一旦遇到一场狂风暴雨就把它摧毁了。除非像刚才说过的，那些突然之间一跃而为君主的人们是很有能力的人，他们知道必须立即作好准备保持由幸运投到他们怀中之物，并且在当上国王以后奠定基础——这些基础在他人说来是在作为国王之前就已经奠定了的。
 
 关于依靠自己的能力或者依靠幸运而成为君主这两种方法，我想提出尚在我们脑海中的两个例子。这就是弗朗切斯科·斯福尔扎和切萨雷·博尔贾这两个人。弗朗切斯科运用适当的手段，依靠自己卓越的能力，由平民一跃而为米兰公爵。他取得其地位时备极辛苦，事后保持其地位就没有多少困难了。另方面，那位被老百姓称为瓦伦蒂诺公爵的切萨雷却是依靠他父亲的好运而取得那个国家的。可是后来由于这种好运消失，他也就亡国了，尽管他在这个依靠他人的武力和依靠幸运而获得的国家里，为着使自己能够在那里扎根，已经采取了各种措施并且凡是一个明智能干的人应做的一切事情他都做了。因为，正如以上所述，一个人如果在开头的时候没有奠定基础，事后可以运用巨大的能力去打基础，虽然这对于建筑师说来是很困难的，而且对于建筑物是很危险的。所以如果考察一下公爵的全部进展过程，我们就会看到他曾经为着他的未来的权力奠定牢固的基础。我认为讨论这件事并不是多余的。因为我不知道，除这位公爵的行动这个例子之外，对于一位新君主还有什么更好的教训。再说，如果他的处置无济于事的话，这并不是他本人的过错，而是由于运气极端的异常恶劣使然。①
 
@@ -28,7 +28,7 @@
 
 >②保罗·奥尔西尼(SignorPaolo〔Orsine〕是奥尔西尼家族的头头之一，拥有军事力量，于1502年被切萨雷·博尔贾杀害于西尼加利亚(Sinigaglia)。
 
-因为这一点很值得注意，而且值得他人效法，所以我想不应该把它略而不谈。当公爵占领罗马尼阿的时候，他察觉罗马尼阿过去是在一些孱弱的首领们统治之下，他们与其说是统治他们的属民，倒不如说是掠夺属民，给他们制造种种事端，使他们分崩离析而不是团结一致，以致地方上充满了盗贼、纷争和各式各样横行霸道的事情。他想使当地恢复安宁并服从王权，认为必需给他们建立一个好的政府，于是他选拔了一个冷酷而机敏的人物雷米罗·德·奥尔科①，并授予全权。这个人在短时期内恢复了地方的安宁与统一，因此获得极大的声誉。可是公爵后来因为害怕引起仇恨，认定再没有必要给他这样过分大的权力。于是他在这个地区的中心设立了一个人民法庭②，委派了一名最优秀的庭长，在那里每一个城市都设有他们自己的辩护人。因为他知道，过去的严酷已经引起人们对他怀有某些仇恨。为此，他要涤荡人民心中的块垒，把他们全部争取过来。他想要表明：如果过去发生任何残忍行为，那并不是由他发动的，而是来自他的大臣刻薄的天性。他抓着上述时机，在一个早晨使雷米罗被斫为两段，曝尸在切塞纳的广场上，③在他身旁放着一块木头和一把血淋淋的刀子。这种凶残的景象使得人民既感到痛快淋漓，同时又惊讶恐惧。
+因为这一点很值得注意，而且值得他人效法，所以我想不应该把它略而不谈。当公爵占领罗马尼阿的时候，他察觉罗马尼阿过去是在一些孱弱的首领们统治之下，他们与其说是统治他们的属民，倒不如说是掠夺属民，给他们制造种种事端，使他们分崩离析而不是团结一致，以致地方上充满了盗贼、纷争和各式各样横行霸道的事情。他想使当地恢复安宁并服从王权，认为必需给他们建立一个好的政府，于是他选拔了一个冷酷而机敏的人物雷米罗·德·奥尔科①，并授予全权。这个人在短时期内恢复了地方的安宁与统一，因此获得极大的声誉。可是公爵后来因为害怕引起仇恨，认定再没有必要给他这样过分大的权力。于是他在这个地区的中心设立了一个人民法庭②，委派了一名最优秀的庭长，在那里每一个城市都设有他们自己的辩护人。因为他知道，过去的严酷已经引起人们对他怀有某些仇恨。为此，他要涤荡人民心中的块垒，把他们全部争取过来。他想要表明：如果过去发生任何残忍行为，那并不是由他发动的，而是来自他的大臣刻薄的天性。他抓着上述时机，在一个早晨使雷米罗被斫为两段，曝尸在切塞纳的广场上，③在他身旁放着一块木头和一把血淋淋的刀子。这种凶残的景像使得人民既感到痛快淋漓，同时又惊讶恐惧。
 
 >①雷米罗·德·奥尔科(RemirrodeOrco)原切萨雷·博尔质的军官，1501年被派往罗马尼阿代理博尔贾统治。1502年12月22日被投狱，26日被处决。
 
@@ -56,7 +56,7 @@
 
 >③1503年亚历山大六世死后，选出庇护三世继仪，未就任即去世，另选朱利奥二世继任。
 
-当我回顾公爵的一切行动之后，我认为他没有可以非难之处。恰好相反，我觉得应当象我在上面提出的把公爵提出来，让那些由于幸运或者依靠他人的武力而取得统治权的一切人效法。因为他具有至大至刚的勇气和崇高的目的，他只能采取这种行动，舍此别无他途。只是由于亚历山大短命和他本人患病，才使他的鸿图终成画饼。所以，如果一个人认为，为了确保他的新的王国领土安全免遭敌人侵害，有必要争取朋友，依靠武力或者讹诈制胜，使人民对自己又爱戴又畏惧，使军队既服从又尊敬自己，把那些能够或者势必加害自己的人们消灭掉，采用新的办法把旧制度加以革新，既有严峻一面又能使人感恩，要宽宏大量且慷慨好施，要摧毁不忠诚的军队，创建新的军队，要同各国国王和君主们保持友好，使他们不得不殷勤地帮助自己，或者诚惶诚恐不敢得罪自己，那么，他再找不到比公爵这个人的行动更生动活泼的范例了。
+当我回顾公爵的一切行动之后，我认为他没有可以非难之处。恰好相反，我觉得应当像我在上面提出的把公爵提出来，让那些由于幸运或者依靠他人的武力而取得统治权的一切人效法。因为他具有至大至刚的勇气和崇高的目的，他只能采取这种行动，舍此别无他途。只是由于亚历山大短命和他本人患病，才使他的鸿图终成画饼。所以，如果一个人认为，为了确保他的新的王国领土安全免遭敌人侵害，有必要争取朋友，依靠武力或者讹诈制胜，使人民对自己又爱戴又畏惧，使军队既服从又尊敬自己，把那些能够或者势必加害自己的人们消灭掉，采用新的办法把旧制度加以革新，既有严峻一面又能使人感恩，要宽宏大量且慷慨好施，要摧毁不忠诚的军队，创建新的军队，要同各国国王和君主们保持友好，使他们不得不殷勤地帮助自己，或者诚惶诚恐不敢得罪自己，那么，他再找不到比公爵这个人的行动更生动活泼的范例了。
 
 我们可以用来责难公爵的，唯有选举朱利奥当教皇这一件事情。在这次选举中他选择错了，因为，正如我已经谈到的，他本来能够阻止任何人当选为教皇，他如果不能够选举一个使自己称心满意的教皇，他也绝不应该同意选举任何一个自己已经得罪的枢机主教或者一个当上教皇就会害怕自己的枢机主教来担任教皇，因为人们出于恐惧或者出于仇恨都会损害你的。在公爵所曾经开罪的人们当中，有圣·皮耶罗·阿德·温库拉①、科隆纳②、圣·乔治③和阿斯卡尼奥④等人。除了罗阿诺和西班牙人⑤之外，其余的人一旦当上教皇，势必害怕公爵。——至于西班牙人则由于他们的同盟关系和对他负有义务，罗阿诺则由于自己同法兰西王国的关系，才享有权力，所以是个例外。因此，公爵本来应该选择一个西班牙人当教皇①。如果这一点办不到，他就应该赞同选立罗阿诺，而不是选举圣·皮耶罗·阿德·温库拉。如果任何人相信给以新的恩惠就会使一个大人物忘却旧日的损害，他就是欺骗自己。因此，公爵在这次教皇的选举中犯了错误，这就是他终于灭亡的原因。②
 
