--- a/08 论以邪恶之道获得君权的人们.md
+++ b/08 论以邪恶之道获得君权的人们.md
@@ -28,11 +28,11 @@
 
 >②维泰洛佐·维泰利(VittellozoVittelli)，1502年在西尼加利亚被切萨雷·博尔贾杀害。
 
-因此，焦万尼分毫不差地尽了对于他的外甥应尽的责任，使他受到费尔莫市的人们荣耀的接待，请他住到他自己的家里。奥利韦罗托在那里过了几天，为自己将来的阴谋诡计作好了必要的秘密安排之后，他举行一个盛大的宴会，邀请了焦万尼·福利亚尼和费尔莫市的一些首要人物出席。③当吃过酒肴以及这种宴会所常有的其他余兴完毕之后，奥利韦罗托装模作样地开始发表某种重要讲话，大说特说教皇亚历山大和他的儿子切萨雷的伟大，以及他们的鸿图伟业。当焦万尼和其他的人们对于他这个讲话作答之后，奥利韦罗托立刻站起来说，这些事情应当在较为秘密的地方进行讨论。于是他自己退入一个房间里去，焦万尼和所有其他的人也都跟随他进去了。可是他们刚要坐下来，士兵们就从密藏的地方涌上来，把焦万尼和所有其余的人统统杀了。在这次谋杀之后，奥利韦罗托就跨上马背，在市里往来驰骋，把宫廷中的最高长官围困起来，使他们惊骇恐惧，不得不唯命是从，并且确认由他本人当君主的政府。他把所有那些心怀不满可能加害于他的人们全部杀掉，同时颁布关于民政和军政的新的规章制度，来巩固自己的势力。这样一来，他在保有这个王国的一年中，不但在费尔莫这个城市之内安全不过，而且使所有的邻国都害怕他。但是，正如上面已经提过的，当切萨雷·博尔贾在西尼加利亚征服了奥尔西尼和维泰利的人们的时候，如果奥利韦罗托没有上博尔贾的当，他的灭亡就会象阿加托克雷的灭亡一样困难了。因此，在奥利韦罗托杀亲以后一年，他本人以及他在善恶方面拜作老师的维泰洛佐一道被绞死了。
+因此，焦万尼分毫不差地尽了对于他的外甥应尽的责任，使他受到费尔莫市的人们荣耀的接待，请他住到他自己的家里。奥利韦罗托在那里过了几天，为自己将来的阴谋诡计作好了必要的秘密安排之后，他举行一个盛大的宴会，邀请了焦万尼·福利亚尼和费尔莫市的一些首要人物出席。③当吃过酒肴以及这种宴会所常有的其他余兴完毕之后，奥利韦罗托装模作样地开始发表某种重要讲话，大说特说教皇亚历山大和他的儿子切萨雷的伟大，以及他们的鸿图伟业。当焦万尼和其他的人们对于他这个讲话作答之后，奥利韦罗托立刻站起来说，这些事情应当在较为秘密的地方进行讨论。于是他自己退入一个房间里去，焦万尼和所有其他的人也都跟随他进去了。可是他们刚要坐下来，士兵们就从密藏的地方涌上来，把焦万尼和所有其余的人统统杀了。在这次谋杀之后，奥利韦罗托就跨上马背，在市里往来驰骋，把宫廷中的最高长官围困起来，使他们惊骇恐惧，不得不唯命是从，并且确认由他本人当君主的政府。他把所有那些心怀不满可能加害于他的人们全部杀掉，同时颁布关于民政和军政的新的规章制度，来巩固自己的势力。这样一来，他在保有这个王国的一年中，不但在费尔莫这个城市之内安全不过，而且使所有的邻国都害怕他。但是，正如上面已经提过的，当切萨雷·博尔贾在西尼加利亚征服了奥尔西尼和维泰利的人们的时候，如果奥利韦罗托没有上博尔贾的当，他的灭亡就会像阿加托克雷的灭亡一样困难了。因此，在奥利韦罗托杀亲以后一年，他本人以及他在善恶方面拜作老师的维泰洛佐一道被绞死了。
 
 >③这是在耶稣诞辰的第二天，即1501年12月26日。
 
-有些人可能感到奇怪：为什么阿加托克雷和某些象他一类的人们，为人无限奸诈、残暴，后来却能够长时期地在他们本国安全地生活下去，能够保卫自己不受外敌的侵害，而且他本国的公民也从没有阴谋反对他们；而与此相反，其他许多人，依靠残暴的方法，甚至在和平时期也不能够保有他们的国家。至于在胜败未卜的战争时期内就更不用说了。我认为，这是由于妥善地使用或者恶劣地使用残暴手段使然。如果可以把坏事称为好事的话，妥善使用的意思就是说，为了自己安全的必要，可以偶而使用残暴手段，除非它能为臣民谋利益，其后决不再使用。恶劣地使用的意思就是说，尽管开始使用残暴手段是寥寥可数的，可是其后与时俱增，而不是日渐减少。采取上述第一种办法的人们，如同阿加托克雷那样，由于神与人的帮助，对于他们的地位会获得某种补益，而采取另一种办法的人们却不可能自保。
+有些人可能感到奇怪：为什么阿加托克雷和某些像他一类的人们，为人无限奸诈、残暴，后来却能够长时期地在他们本国安全地生活下去，能够保卫自己不受外敌的侵害，而且他本国的公民也从没有阴谋反对他们；而与此相反，其他许多人，依靠残暴的方法，甚至在和平时期也不能够保有他们的国家。至于在胜败未卜的战争时期内就更不用说了。我认为，这是由于妥善地使用或者恶劣地使用残暴手段使然。如果可以把坏事称为好事的话，妥善使用的意思就是说，为了自己安全的必要，可以偶而使用残暴手段，除非它能为臣民谋利益，其后决不再使用。恶劣地使用的意思就是说，尽管开始使用残暴手段是寥寥可数的，可是其后与时俱增，而不是日渐减少。采取上述第一种办法的人们，如同阿加托克雷那样，由于神与人的帮助，对于他们的地位会获得某种补益，而采取另一种办法的人们却不可能自保。
 
 由此可见，占领者在夺取一个国家的时候，应该审度自己必须从事的一切损害行为，并且要立即毕其功于一役，使自己以后不需要每时每日搞下去。这样一来，由于不需要一再从事侵害行为，他就能够重新使人们感到安全，并且通过施恩布惠的方法把他们争取过来；反之，如果一个人由于怯懦或者听从坏的建议不这样做，他的手里就必需时时刻刻拿着钢剑，而且他永远不能够信赖他的老百姓，而由于他的新的继续损害，人民不可能感到安全。因为损害行为应该一下干完，以便人民少受一些损害，他们的积怨就少些；而恩惠应该是一点儿一点儿地赐予，以便人民能够更好地品尝恩惠的滋味。总之，君主最重要的一件事就是应该在人民当中生活，以免发生任何意外事件——不论是好的或者坏的，迫使自己改弦易辙①，因为如果这种变革的必要性是在不利时期发生的，这时你采取严酷手段就太晚了，而你作好事也帮助不了你自己，因为人们认为你是被迫如此，你是不会因此得到任何的感谢的。
 
