--- a/09 论市民的君主国.md
+++ b/09 论市民的君主国.md
@@ -4,7 +4,7 @@
 
 但是如果一个人是由于人民的赞助而获得君权，他就发觉自己是巍然独立的人，在自己周围并没有一个人不准备服从自己或者只有很少数人不准备服从自己的。除此之外，一个君主如果公平处理事情而不损害他人，就不能够满足贵族的欲望，但是却能够使人民感到满足。因为人民的目的比贵族的目的来得公正。前者只是希望不受压迫而已，而后者却希望进行压迫。再说，如果人民满怀不满，君主是永远得不到安全的，因为人民为数众多；另一方面，君主能够使自己安全地对付贵族，因为贵族人数甚少。君主能够预料到那些敌对的人民干出最坏的事情，就是他们将来把自己抛弃了。但是，对于那些敌对的贵族，君主不仅害怕他们抛弃自己，还害怕他们会起来反对自己。因为贵族在这些事情上比平民看得更深远而且更敏锐，常常能够及时使自己得救，而且从他们所预期的将会赢得胜利的一方取得帮助。此外，君主总是不得不和上述的平民在一起生活，但是如果没有上述贵族，君主也能够过得很好，因为他能够随时设立或者废黜贵族，并且能够随心所欲给予或者抹掉他们的名声。
 
-为了更清楚地说明这件事情，我认为对于贵族应该主要地从下述两种方式着眼进行考察：他们支配自己行动的方式使他们自己完全依靠你的运气，抑或不是这样。对于那些这样约束自己而不是贪婪的人们，你应该给以光荣并加以爱护；而对于不是这样约束自己的人们，你可以从下述两种方式着眼进行检验。这就是说，他们这样做可能是由于胆怯或者天生缺乏勇气使然。在这种情况下，你应该利用他们，特别是利用那些能够给你提出有益意见的人们。因为，这样一来，当你隆盛的时候，他们会尊敬你，而当你处在逆境的时候，你也无需畏惧他们。但是，如果他们是为了野心勃勃的目的，故意不依靠你，这是一个征象，表明他们为自己着想比替你着想得更多。君主就应该防范这类人，并且把他们当作公开的敌人那样加以警惕，因为在君主不利时期，他们总是出来帮助把君主灭掉。
+为了更清楚地说明这件事情，我认为对于贵族应该主要地从下述两种方式着眼进行考察：他们支配自己行动的方式使他们自己完全依靠你的运气，抑或不是这样。对于那些这样约束自己而不是贪婪的人们，你应该给以光荣并加以爱护；而对于不是这样约束自己的人们，你可以从下述两种方式着眼进行检验。这就是说，他们这样做可能是由于胆怯或者天生缺乏勇气使然。在这种情况下，你应该利用他们，特别是利用那些能够给你提出有益意见的人们。因为，这样一来，当你隆盛的时候，他们会尊敬你，而当你处在逆境的时候，你也无需畏惧他们。但是，如果他们是为了野心勃勃的目的，故意不依靠你，这是一个征像，表明他们为自己着想比替你着想得更多。君主就应该防范这类人，并且把他们当作公开的敌人那样加以警惕，因为在君主不利时期，他们总是出来帮助把君主灭掉。
 
 因此，如果一个人由于人民的赞助而成为君主的话，他应该同人民保持友好关系。因为他们所要求的只是免于压迫，君主是能够轻而易举地做到这一点的。但是一个人如果同人民对立而依靠贵族的赞助成为君主的话，他头一件应该做的事就是想方设法争取人民。如果他把人民置于自己保护之下，他就轻而易举地做到这一点。因为人们原来预料要受到他的损害而现在从他那里得到了好处，他们对自己的恩人一定更加接近；人民立即对他充满了好感，胜过那些赞助他登上王位的人们。而且君主要赢得人民的好感有许多方法。这些方法根据各种情况而互不相同，我们不能够制作出一定之规，因此现在就不谈了。我只是断言：君主必须同人民保持友谊，否则他在逆境之中就没有补救办法了。
 
