--- a/11 论教会的君主国.md
+++ b/11 论教会的君主国.md
@@ -1,9 +1,12 @@
 # 11 论教会的君主国
 
-现在只剩下教会的君主国有待探讨。关于这种国家，其全部困难来自取得这种国家之前。取得这种国家或者是依靠能力，或者是依靠幸运，而保有它却不是倚靠能力或幸运，这种国家是依靠宗教上的古老的制度维持的。这种制度是十分强有力的，而且具有这样一种特性：它们使它们的君主当权，而不问他们是怎样行事和生活的。这些君主自己拥有国家而不加以防卫，他们拥有臣民而不加以治理；但是，其国家虽然没有防卫却没有被夺取，其臣民虽然没有受到治理却毫不介意，并且既没有意思也没有能力背弃君主。只有这样的君主国才是安全和幸福的。
-但是，由于这种国家是依靠人类智力所不能达到的更高的力量支持的，我就不再谈论它了；因为这种国家显然是由上帝所树立与维护的，如果议论它，就是僭妄的冒失鬼的行为。
+> 现在只剩下教会的君主国有待探讨。关于这种国家，其全部困难来自取得这种国家之前。取得这种国家或者是依靠能力，或者是依靠幸运，而保有它却不是倚靠能力或幸运，这种国家是依靠宗教上的古老的制度维持的。这种制度是十分强有力的，而且具有这样一种特性：它们使它们的君主当权，而不问他们是怎样行事和生活的。这些君主自己拥有国家而不加以防卫，他们拥有臣民而不加以治理；但是，其国家虽然没有防卫却没有被夺取，其臣民虽然没有受到治理却毫不介意，并且既没有意思也没有能力背弃君主。只有这样的君主国才是安全和幸福的。但是，由于这种国家是依靠人类智力所不能达到的更高的力量支持的，我就不再谈论它了；因为这种国家显然是由上帝所树立与维护的，如果议论它，就是僭妄的冒失鬼的行为。
 
-可是人们会问我：罗马教会现在取得了这样大的世俗权力是何因缘？从教皇亚历山大时代上溯，意大利的主权者①，——不仅被称为主权者的人们，甚至虽然是小小的男爵和主子①，向来都轻视教会在世俗事务上的权力，而现今法国的一个国王对它却怕得发抖，因为教会能够把一个法国国王驱逐出意大利，并且使威尼斯人毁灭。虽然这件事情是众所周知的，但是我觉得唤起人们回忆一下并不是多余的。
+现在来探讨教会的君主国，关于这样的国家，其困难全部来自取得此国家之前。取得这种国家或者是依靠能力，或者是依靠幸运，而保有它却不是倚靠能力或幸运，这种国家是依靠宗教上的古老的制度维持的。这种制度十分强有力，而且有这样特性：它们使它们的君主当权，而不问他们是怎样行事和生活的。这些君主自己拥有国家而不加以防卫，他们拥有臣民而不加以治理；但是，其国家虽然没有防卫却没有被夺取，其臣民虽然没有受到治理却毫不介意，并且既没有背弃君主的意思也没有这个能力。只有这样的君主国才是安全和幸福的。但是，由于这种国家是依靠人类智力所不能达到的更高的力量支持的，我就不再谈论它了；因为这种国家显然是由上帝所树立与维护的，如果议论它，就是僭妄的冒失鬼的行为。
+
+> 可是人们会问我：罗马教会现在取得了这样大的世俗权力是何因缘？从教皇亚历山大时代上溯，意大利的主权者①，——不仅被称为主权者的人们，甚至虽然是小小的男爵和主子①，向来都轻视教会在世俗事务上的权力，而现今法国的一个国王对它却怕得发抖，因为教会能够把一个法国国王驱逐出意大利，并且使威尼斯人毁灭。虽然这件事情是众所周知的，但是我觉得唤起人们回忆一下并不是多余的。
+
+可是人们会问我：罗马教会取得了这样大的权力是什么原因呢？从教皇亚历山大时代上溯，意大利的主权者①，——不仅被称为主权者的人们，甚至虽然是小小的男爵和主子①，向来都轻视教会在世俗事务上的权力，而现今法国的一个国王对它却怕得发抖，因为教会能够把一个法国国王驱逐出意大利，并且使威尼斯人毁灭。虽然这件事情是众所周知的，但是我觉得唤起人们回忆一下并不是多余的。
 
 >①主权者(potentati)或译“当权者”、“统治者”等等。此处指佛罗伦萨、威尼斯、米兰、那波利、锡耶纳等国的主权者。
 
