--- a/12 论军队的种类与雇佣军.md
+++ b/12 论军队的种类与雇佣军.md
@@ -4,7 +4,7 @@
 
 依我说，君主用来保卫本国的军队，或者是他自己的军队，或者是雇佣军、援军，或者是混合的军队。而雇佣军和援军是无益的，并且是危险的，一个人如果以这种雇佣军队作为基础来确保他的国家，那么他既不会稳固亦不会安全，因为这些雇佣军队是不团结的，怀有野心的，毫无纪律，不讲忠义，在朋友当中则耀武扬威，在敌人面前则表现怯懦。他们既不敬畏上帝，待人亦不讲信义；毁灭之所以迟迟出现只是由于敌人的进攻推迟罢了。因此你在和平时期受到这些雇佣军掠夺，而在战争中则受你的敌人掠夺。这是因为，除了一点军饷之外，他们既没有忠义之忱，也没有其他的理由使他们走上战场，而这点军饷并不足以使他们愿意为你牺牲性命。当你不打仗的时候，他们情愿给你当兵，但是如果发生战争，他们就逃避或者一走了事。
 
-要我证明这一点是毫不费力的，因为现在意大利崩溃不是由于别的原因，而是由于她许多年来依赖雇佣军，虽然他们先前曾经帮助某些人取得进展，并且在彼此之间显得勇猛不过，可是当外敌压境的时候，他们就原形毕露。因此，法国国王查理〔八世〕“拿着粉笔”①就能够不费吹灰之力而占据意大利。有人说，其原因是由于我们的罪过，他说的确是真实情况，②可是这并不是他所想象的那些罪过，而是我已经论述的那些罪过。因为那是君主们的罪过，所以他们也受到了惩罚。
+要我证明这一点是毫不费力的，因为现在意大利崩溃不是由于别的原因，而是由于她许多年来依赖雇佣军，虽然他们先前曾经帮助某些人取得进展，并且在彼此之间显得勇猛不过，可是当外敌压境的时候，他们就原形毕露。因此，法国国王查理〔八世〕“拿着粉笔”①就能够不费吹灰之力而占据意大利。有人说，其原因是由于我们的罪过，他说的确是真实情况，②可是这并不是他所想像的那些罪过，而是我已经论述的那些罪过。因为那是君主们的罪过，所以他们也受到了惩罚。
 
 >①原文“拿着粉笔(石膏)”(colgesso)，是引用教皇亚历山大六世形容法国查理八世征服意大利轻而易举所说的俏皮话。据说，在1494年查理穿过意大利时没有遭到抵抗，因此教皇亚历山大常说法国人侵入意大利，手里拿着粉笔(石膏)，只要在那里画上标记就能够在那里安营扎寨，而无需拿着剑进行战斗。
 
