--- a/13 论援军、混合军和本国的军队.md
+++ b/13 论援军、混合军和本国的军队.md
@@ -16,7 +16,7 @@
 
 我毫不踌躇地援引切萨雷·博尔贾及其行迹为例。这位公爵依靠援军侵入罗马尼阿，他们全部是法国的军队并且依靠他们占领了伊莫拉和富利。但是后来，他觉得这种军队靠不住，于是转而依靠雇佣军。因为他认为雇佣军的危险较小，他雇佣了奥尔西尼和维泰利的兵，可是，后来在管理中觉察他们可疑、不忠实，并且有危险的时候，他立即消灭他们，回过头来依靠他自己的人。我们注意了一下：当这位公爵只是依靠法国人，当他依靠奥尔西尼和维泰利的雇佣军，以及当他依靠自己的军队和他自己的时候，他的名气互有不同，我们就能够很容易地认识到这些军队之间的差别了。我们发现，当每个人都知道他是他的军队的完全的主人的时候，他的名声总是愈来愈大，他受到人们的敬佩，是任何时候都比不上的。
 
-虽然我不打算离开意大利最近发生的这些事例，但是我不想忽视我在上面已经提到的那些人当中的一个——锡拉库萨的耶罗内。正如我已经说过的，这个人被锡拉库萨人推举为军队的长官，他随即发觉那些象我们意大利雇佣军那样组成的雇佣军是无益的，并且觉得自己既不能够保有他们又不能够将他们解散，他不得不把他们全部斩杀。以后，他就率领自己的军队而不是外国的军队作战。
+虽然我不打算离开意大利最近发生的这些事例，但是我不想忽视我在上面已经提到的那些人当中的一个——锡拉库萨的耶罗内。正如我已经说过的，这个人被锡拉库萨人推举为军队的长官，他随即发觉那些像我们意大利雇佣军那样组成的雇佣军是无益的，并且觉得自己既不能够保有他们又不能够将他们解散，他不得不把他们全部斩杀。以后，他就率领自己的军队而不是外国的军队作战。
 
 现在我还想回顾一下旧约圣经里面有关这个问题的一个譬喻。大卫请求扫罗王让自己同非利士人的挑战者歌利亚战斗。于是扫罗为着使他壮胆，把自己的铠甲给他佩戴，可是当大卫试了一下之后就立即谢绝了。他说，戴这个铠甲就不能够很好地发挥自己的力量，他宁愿使用自己的投石器和自己的刀子同敌人周旋。总而言之，他人的铠甲不是从你的身上落下来就是把你压倒，或者把你束缚得紧紧的。
 
