--- a/18 守信.md
+++ b/18 守信.md
@@ -14,7 +14,7 @@
 
 君主既然必需懂得善于运用野兽的方法，他就应当同时效法狐狸与狮子。由于狮子不能够防止自己落入陷阱，而狐狸则不能够抵御豺狼。因此，君主必须是一头狐狸以便认识陷阱，同时又必须是一头狮子，以便使豺狼惊骇。然而那些单纯依靠狮子①的人们却不理解这点。所以，当遵守信义反而对自己不利的时候，或者原来使自己作出诺言的理由现在不复存在的时候，一位英明的统治者②绝不能够，也不应当遵守信义。假如人们全都是善良的话，这条箴言就不合适了。但是因为人们是恶劣的，而且对你并不是守信不渝的，因此你也同样地无需对他们守信。一位君主总是不乏正当的理由为其背信弃义涂脂抹粉。关于这一点，我能够提出近代无数的实例为证，它们表明：许多和约和许多诺言由于君主们没有信义而作废和无效；而深知怎样做狐狸的人却获得最大的成功。但是君主必须深知怎样掩饰这种兽性，并且必须做一个伟大的伪装者和假好人。人们是那样地单纯，并且那样地受着当前的需要所支配，因此要进行欺骗的人总可以找到某些上当受骗的人们。
 
->①原文“...insullòne”，意谓“总是象狮子般行动，使用公开的暴力”。
+>①原文“...insullòne”，意谓“总是像狮子般行动，使用公开的暴力”。
 
 >②此处马基雅维里改用“一位明智的统治者”(unosignoreprudente)。
 
