--- a/19 论蔑视与憎恨.md
+++ b/19 论蔑视与憎恨.md
@@ -12,7 +12,7 @@
 
 >③见第17章。
 
-君主如果被人认为变幻无常、轻率浅薄、软弱怯懦、优柔寡断，就会受到轻视。因此，他必须象提防暗礁一样提防这一切。他应该努力在行动中表现伟大、英勇、严肃庄重、坚忍不拔。关于臣民的私事问题，他所作的决断应该是不可更改的。而且，他应该支持人们对他抱有这样一种见解：谁都不要指望欺骗他或者瞒过他。
+君主如果被人认为变幻无常、轻率浅薄、软弱怯懦、优柔寡断，就会受到轻视。因此，他必须像提防暗礁一样提防这一切。他应该努力在行动中表现伟大、英勇、严肃庄重、坚忍不拔。关于臣民的私事问题，他所作的决断应该是不可更改的。而且，他应该支持人们对他抱有这样一种见解：谁都不要指望欺骗他或者瞒过他。
 
 君主使人们对自己抱有这种见解，就会深受敬重，而阴谋反对一个受到敬重的人是困难的。如果大家都认为他卓越非凡而且受到他的臣民尊敬，要攻击他也是困难的。因此，君主必须注意两件事：其一是内部的，它来自臣民方面；其二是外部的，它来自外国势力。对于后一种情况，依靠坚甲利兵和依靠亲密的盟友就能够御防了。而且，如果他拥有坚甲利兵，他们总会有亲密的盟友。除非国内已经受到阴谋的捣乱，否则在对外泰然无事的时候，国内也是泰然无事的。即使遇有外患，如果君主已经如我所说的安排和立身行事，只要他不是自暴自弃，他就能够如同我所说的斯巴达的纳比德①那样抵抗一切攻击。
 
@@ -101,7 +101,7 @@
 
 但是他的儿子安托尼诺也是一个非常卓越的人物，他在人民的眼中是可敬爱的，在军人方面是受欢迎的。这是因为他是一个尚武的人，最能忍受一切艰难困苦，瞧不起一切珍馐美味和任何其他奢侈品，这一点使他赢得全体军人的爱戴。可是，他的凶暴残忍却是前所未闻的，他杀人无数，其后又杀害罗马大部分居民和亚历山大里亚的全部居民。这件事使全世界都痛恨他，而且在他左右的人们对他也感到恐惧，以致他后来被自己军队中的一个“百人队”(Centurione)队长杀死了。
 
-在这里必须注意：象这一类的死亡，是他人下定决心蓄意造成的，任何人只要不怕死都能够加害于君主，因此君主不能避免这种死亡。但是君主可以用不着太害怕这种死亡，因为这样死去毕竟是极罕见的。他只需要留意不要严重地损害服侍他的人或者在他左右为国家辛劳的那些人，不要如同安托尼诺之所为——安托尼诺把一个“百人队”队长的兄弟凌辱备致地杀死了，以后每日还对这个“百人队”队长加以威胁，但是安托尼诺仍然继续让他担任自己的禁卫队长。正如事实所证明的，这是一种冒失的作法，而且招致自身殒灭。
+在这里必须注意：像这一类的死亡，是他人下定决心蓄意造成的，任何人只要不怕死都能够加害于君主，因此君主不能避免这种死亡。但是君主可以用不着太害怕这种死亡，因为这样死去毕竟是极罕见的。他只需要留意不要严重地损害服侍他的人或者在他左右为国家辛劳的那些人，不要如同安托尼诺之所为——安托尼诺把一个“百人队”队长的兄弟凌辱备致地杀死了，以后每日还对这个“百人队”队长加以威胁，但是安托尼诺仍然继续让他担任自己的禁卫队长。正如事实所证明的，这是一种冒失的作法，而且招致自身殒灭。
 
 但是，让我们谈谈科姆莫多吧，因为他是以马尔科的太子身份根据继承权而享有帝位的，他只要踏着他父亲的足迹前进，使人民和士兵满意，他就能够容易不过地保有这个帝国。可是，由于他秉性残忍和野蛮，为了自己能够鱼肉人民，他要买好军人，让他们放纵不羁；另一方面，他没有保持自己的尊严，常常走到竞技场同搏斗者格斗，并且做出其他卑鄙的、同皇帝的尊严极不相称的事情，因此，他受到士兵轻视。由于一方面憎恨他，而另一方面蔑视他，于是人们合谋反对他，并且终于把他杀害了。
 
@@ -111,7 +111,7 @@
 
 这样一来，全世界对他的出身卑贱抱有轻蔑之感，并且由于害怕他的残暴而产生憎恶之情，于是非洲首先造反了，其后是罗马的元老院和全罗马的人民以及整个意大利都合谋反对他了。甚至连他自己的军队也加入谋反了。因为他的军队包围阿奎莱亚(Aquile—ia)，要夺取它而遇到种种困难的时候，对于他的残酷感到恼恨，同时因为发现他的仇敌是如此之多，也就不太害怕他，于是把他杀死了。
 
-至于埃利奥加巴洛、马克里诺、尤里亚诺等人，我就不打算议论了，因为他们都是十足可鄙的，所以很快就给消灭了。但是我想就上面的论述总结一下。我认为，我们这个时代的君主们要使自己政府的军队特别满意，其困难比往时减少了，因为尽管他们必须对那些军队给以某些照顾，可是如有任何困难很快就获得解决了。我们这个时代的任何一位君主都没有一支军队象罗马帝国的军队那样，同政府和地方行政当局一道根深蒂固。如果说，在罗马帝国时代，满足军人比满足人民更有必要，那末现在所有的君主，除了土耳其皇帝和苏丹①之外，满足人民倒是比满足军人更有必要，因为现在人民比军人更有力量了。
+至于埃利奥加巴洛、马克里诺、尤里亚诺等人，我就不打算议论了，因为他们都是十足可鄙的，所以很快就给消灭了。但是我想就上面的论述总结一下。我认为，我们这个时代的君主们要使自己政府的军队特别满意，其困难比往时减少了，因为尽管他们必须对那些军队给以某些照顾，可是如有任何困难很快就获得解决了。我们这个时代的任何一位君主都没有一支军队像罗马帝国的军队那样，同政府和地方行政当局一道根深蒂固。如果说，在罗马帝国时代，满足军人比满足人民更有必要，那末现在所有的君主，除了土耳其皇帝和苏丹①之外，满足人民倒是比满足军人更有必要，因为现在人民比军人更有力量了。
 
 >①指君士坦丁堡的苏丹和埃及的苏丹。1517年埃及王国合并于土耳其。
 
