--- a/20 论有益与无益.md
+++ b/20 论有益与无益.md
@@ -22,7 +22,7 @@
 
 毫无疑问，当君主克服种种困难和对他的反抗时，他就变成伟大人物。特别是当幸运之神要使一位新君主成为伟大人物的时候，他比一位世袭君主更加需要获得盛名，幸运之神就给他树立敌人，并且使他们从事反对他的战争，以便使他可以有理由战胜他们，并且凭借他的敌人给他的梯子步步高升。因此许多人认为，一个英明的君主一有机会，就应该诡谲地树立某些仇敌，以便把它制服，从而使自己变得更加伟大。
 
-君主们，特别是新君主们，现在已经发现在他们国家肇始的时候，他们认为可疑的人们比在开始时他们信赖的人们更加忠诚，更加有用。潘多尔福·佩特鲁奇这位西耶纳的君主①治国，使用他过去怀疑的人比使用别的人来得多。但是这种事情我们不能够概而言之，因为这件事情按照具体情况而异。我要说的只是，那些在一个国家肇始的时候是敌对的人们，如果他们是需要获得君主的支持以保持其地位的人们，新君主往往很容易赢得他们；而且由于他们明白自己必须用行动来消除君主原先形成的对他们的坏印象，他们更加不得不竭志尽忠侍奉君主。因此，君主从他们那里得到的利益，常常比从另一些人那里得来的多，因为后一种人抱着过分的安全感侍奉君主，从而对君主的事情掉以轻心。
+君主们，特别是新君主们，现在已经发现在他们国家肇始的时候，他们认为可疑的人们比在开始时他们信赖的人们更加忠诚，更加有用。潘多尔福·佩特鲁奇这位西耶纳的君主①治国，使用他过去怀疑的人比使用别的人来得多。但是这种事情我们不能够概而言之，因为这件事情按照具体情况而异。我要说的只是，那些在一个国家肇始的时候是敌对的人们，如果他们是需要获得君主的支持以保持其地位的人们，新君主往往很容易赢得他们；而且由于他们明白自己必须用行动来消除君主原先形成的对他们的坏印像，他们更加不得不竭志尽忠侍奉君主。因此，君主从他们那里得到的利益，常常比从另一些人那里得来的多，因为后一种人抱着过分的安全感侍奉君主，从而对君主的事情掉以轻心。
 
 >①潘多尔福·佩特鲁奇(PandolfoPetrucci)杀其继父，于1502年成为西耶纳的统治者，1503年被驱逐，
 其后由于法国国王的支持再度执政。
