--- a/21 为人.md
+++ b/21 为人.md
@@ -30,7 +30,7 @@
 
 在第二种情况下，亦即是当你对于现在交战的双方无论哪一方获胜都不害怕的时候，你就必须更加审慎考虑你支持哪一方，因为你在利用他方的帮助把一方覆灭，——而他方假若是明智的话，是一定会拯救后者的。如果他得胜了，他就得听你的决定；而在你的帮助下，他是不可能不胜利的。
 
-在这里必须着重指出：一个君主应当注意，绝不要为了进攻别国而同一个比自己强大的国家结盟，除非有此必要，迫不得已，正如上面说的。因为即使你获胜，你仍然成为强国的俘虏。然而君主们应当尽力避免处于听从他人随意决定的境地。威尼斯人同法国人联盟反对米兰公爵——他们本来可以避免结成这种联盟——结果使他们自己毁灭了。但是当君主不能够避免结成联盟的时候，就象教皇和西班牙出兵攻击伦巴底时佛罗伦萨人的情况，那么，由于上述的理由，他就必须联合一方。
+在这里必须着重指出：一个君主应当注意，绝不要为了进攻别国而同一个比自己强大的国家结盟，除非有此必要，迫不得已，正如上面说的。因为即使你获胜，你仍然成为强国的俘虏。然而君主们应当尽力避免处于听从他人随意决定的境地。威尼斯人同法国人联盟反对米兰公爵——他们本来可以避免结成这种联盟——结果使他们自己毁灭了。但是当君主不能够避免结成联盟的时候，就像教皇和西班牙出兵攻击伦巴底时佛罗伦萨人的情况，那么，由于上述的理由，他就必须联合一方。
 
 任何一个国家都不能够认为自己总是能够选择一条万全的途径。相反，它倒是应当预料自己只能采取完全可疑的途径，因为事情通常是：人们在避免一种不利的同时，难免遭到另一种不利。但是，谨慎在于能够认识各种不利的性质，进而选择害处最少的作为最佳的途径。
 
