--- a/24 意大利的君主们为什么丧失了他们的国家.md
+++ b/24 意大利的君主们为什么丧失了他们的国家.md
@@ -2,7 +2,7 @@
 
 上述各项事情，如果能够审慎地遵守，就能够使一位新君主宛如旧君主一样；并且立即使他在国家里比立国久远的君主更加安全、更加坚强。因为人们对于新君主的行动，比对世袭的君主更加密切注意；而且如果这些行动被认为是有能力的，它们比古老的家族更有力地赢得人们，更紧密地把人们维系在自己身边。因为当前的事物比过去的事物更加吸引人们；如果他们感觉现在好，他们就心满意足而更无它求；只要新君主在其他事情上没有什么缺陷，人们将会竭尽全力保卫他。这样，由于他创立了一个新的君主国，并且以好的法律、好的武器、好的盟友和好的榜样，使这个国家繁荣昌盛和强大起来，他就会获得加倍的光荣。反之，一个依世袭当君主的人，如果由于不审慎而丧失他的君主国，他就会遭受加倍的羞辱。
 
-如果我们考虑一下我们这个时代在意大利丧失了他们的国家的那些统治者，象那波利国王、米兰公爵①以及其他的人们，我们在他们身上首先发现，由于上面已经详述的原因①，他们的军队都有一个共同的缺点；其次，我们看到，他们当中有些人或者是被人民敌视，或者是，尽管人民对他们友善，他们却不知道怎样使自己免于贵族为患。君主们如果没有这些缺点，只要他们有足够的力量能够保持一支作战的军队，他们就不会丧失他们的国家。
+如果我们考虑一下我们这个时代在意大利丧失了他们的国家的那些统治者，像那波利国王、米兰公爵①以及其他的人们，我们在他们身上首先发现，由于上面已经详述的原因①，他们的军队都有一个共同的缺点；其次，我们看到，他们当中有些人或者是被人民敌视，或者是，尽管人民对他们友善，他们却不知道怎样使自己免于贵族为患。君主们如果没有这些缺点，只要他们有足够的力量能够保持一支作战的军队，他们就不会丧失他们的国家。
 
 >①那波利国王是指阿拉冈的费尔迪南多(见第1章)。米兰公爵是指鲁多维科·莫罗(见第3章)。
 
