--- a/26 解放意大利.md
+++ b/26 解放意大利.md
@@ -24,7 +24,7 @@
 
 因此，如果你的显封的王室决意效法我在前面提到的那些拯救国家的优秀人物的话，第一件事情就是组织自己的军队，作为任何一件事业的真正基础，因为没有比他们更忠实、更真诚、更优秀的士兵了。而且，虽然他们每一个人都是好的，但是当他们看到受他们的君主的指挥并且由他授勋和款待的时候，他们团结在一起就变得更加好。因此，为了能够运用意大利的实力防御外侮，必须筹建这样一支军队。
 
-虽然瑞士和西班牙的步兵被人们认为是可怕的，但是它们两者都各有缺点，因此，第三种部队②不但能够对抗他们，而且确信能够战胜他们。因为西班牙人不能够抵御骑兵，而瑞士人一旦在战斗中遇到同自己一样顽强的步兵的时候，他们就不能不感到害怕。所以经验已经证明，而且将来还要证明，西班牙人不能够抗拒法国骑兵，而瑞士人则被西班牙步兵所消灭。虽然这后一件事到目前还没有看到整个经历，但是在拉文纳战役中③，已有了一个证明：当时西班牙步兵同采取与瑞士人同样战术的德国军队会战，西班牙人靠他们身体敏捷和圆盾的帮助，潜入德军跟前，在德军长矛无能为力的情况下，安然地袭击德军，后者无法招架；假使当时西班牙人不是受到骑兵的袭击，他们定会把德国人全部消灭掉。因此，如果看到这两种类型的骑兵的弱点，就能够创建一种新型的骑兵，它既能击退骑兵，又不需要害怕步兵。要做到这一点，就要选择武器和改变战术。而这一切就象新制度一样，会给一位新君主带来名誉和伟大的地位。
+虽然瑞士和西班牙的步兵被人们认为是可怕的，但是它们两者都各有缺点，因此，第三种部队②不但能够对抗他们，而且确信能够战胜他们。因为西班牙人不能够抵御骑兵，而瑞士人一旦在战斗中遇到同自己一样顽强的步兵的时候，他们就不能不感到害怕。所以经验已经证明，而且将来还要证明，西班牙人不能够抗拒法国骑兵，而瑞士人则被西班牙步兵所消灭。虽然这后一件事到目前还没有看到整个经历，但是在拉文纳战役中③，已有了一个证明：当时西班牙步兵同采取与瑞士人同样战术的德国军队会战，西班牙人靠他们身体敏捷和圆盾的帮助，潜入德军跟前，在德军长矛无能为力的情况下，安然地袭击德军，后者无法招架；假使当时西班牙人不是受到骑兵的袭击，他们定会把德国人全部消灭掉。因此，如果看到这两种类型的骑兵的弱点，就能够创建一种新型的骑兵，它既能击退骑兵，又不需要害怕步兵。要做到这一点，就要选择武器和改变战术。而这一切就像新制度一样，会给一位新君主带来名誉和伟大的地位。
 
 因此，这个时机一定不要错过了，以便意大利经过长时期之后，终于能够看到她的救星出现。我无法表达：在备受外国蹂躏的一切地方，人们将怀着怎样的热爱、对复仇雪耻的渴望、多么顽强的信仰，抱着赤诚，含着热泪来欢迎他！什么门会对他关闭？有什么人会拒绝服从他？怎样的嫉妒会反对他？有哪个意大利人会拒绝对他表示臣服？蛮族的控制对于我们每一个人都臭不可闻了。请你的显赫的王室，以人们从事正义事业所具有的那种精神和希望，去担当这个重任，使我们的祖国在她的旗帜下日月重光，在她的指示下，我们可以实现诗人佩脱拉克①的话语：
 “反暴虐的力量，将拿起枪，
