--- a/05 各自法律下生活及怎样统治.md
+++ b/05 各自法律下生活及怎样统治.md
@@ -2,15 +2,15 @@
 
 对于占领前在各自的法律下生活的城市或君主国应当怎样统治
 
-> 如果被征服的国家，象上面所说的那样，向来习惯于在它们自己的法律之下自由地生活的话，那么想要保有这种国家有三种办法：其一是，把它们毁灭掉；其二是，亲自前往驻在那里；其三是，允许它们在它们自己的法律之下生活，同时要它们进贡并且在那个国家里面建立一个对你友好的寡头政府①。因为这样的一个政府是由君主建立的，它知道如果不倚靠他的友谊和力量，它就不能够继续存在，于是竭其全力拥护君主。而且如果君主想要保有一个向来习惯于自由生活的城市，那么借助于这个城市的市民比依靠任何其他方法容易得多。
+> 如果被征服的国家，像上面所说的那样，向来习惯于在它们自己的法律之下自由地生活的话，那么想要保有这种国家有三种办法：其一是，把它们毁灭掉；其二是，亲自前往驻在那里；其三是，允许它们在它们自己的法律之下生活，同时要它们进贡并且在那个国家里面建立一个对你友好的寡头政府①。因为这样的一个政府是由君主建立的，它知道如果不倚靠他的友谊和力量，它就不能够继续存在，于是竭其全力拥护君主。而且如果君主想要保有一个向来习惯于自由生活的城市，那么借助于这个城市的市民比依靠任何其他方法容易得多。
 
-如果被征服的国家，像上面所说的那样，向来习惯于在它们自己的法律之下自由地生活的话，那么想要保有这种国家有三种办法：其一是，把它们毁灭掉；其二是，亲自前往驻在那里；其三是，允许他们在他们自己的法律之下生活，同时要它们进贡并且在那个国家里面建立一个对你友好的寡头政府①。因为这样的一个政府是由君主建立的，他知道如果不倚靠他的友谊和力量，它就不能够继续存在，于是竭其全力拥护君主。而且如果君主想要保有一个向来习惯于自由生活的城市，那么借助于这个城市的市民比依靠任何其他方法容易得多。
+如果被征服的国家，像上面所说的那样，向来习惯于在他们自己的法律下自由地生活，那么想要保有这种国家有三种办法：其一，把他们毁灭掉；其二，亲自前往驻扎在那里；其三，允许他们在他们自己的法律之下生活，同时要他们进贡并且在那个国家里面建立一个对你友好的寡头政府①。因为这样的政府是由君主建立的，他知道如果不倚靠他的友谊和力量，他就不能够继续存在，于是竭其全力拥护君主。而且如果君主想要保有一个向来习惯于自由生活的城市，那么借助于这个城市的市民比依靠任何其他方法容易得多。
 
 > ①“寡头政府”(unostatodipochi)意谓由被征服的国家的少数公民组成对征服者效忠的政府。
 
 > 斯巴达人和罗马人就是两个例子①。斯巴达人依靠在当地建立一个寡头政府来控制雅典和底比斯；但是结果仍然失掉雅典和底比斯。罗马人为着保有卡普阿②、迦太基③和努曼齐阿④，把它们毁灭了，就没有失去它们。可是罗马人想同斯巴达人那样保有希腊，让它享有自由并且允许它的法律存在，他们却没有获得成功。因此，他们为着保有希腊，不得不把那个地区的许多城市加以破坏。因为要稳固地占有它们，除了毁灭它们之外，确实没有别的办法。从而任何人一旦成为一个城市的主子，如果这个城市原来习惯于自由的生活，而他不把这个城市消灭，他就是坐待它把自己消灭。因为这个城市在叛乱的时候，总是利用自由的名义和它的古老的秩序作为借口。而这两者尽管经过悠久的岁月或者施恩授惠都不能够使人们忘怀。除非将那里的居民弄得四分五裂或者东离西散，否则无论你怎么办或者怎样预防，他们还是永远不会忘掉那个名义和那种秩序的，正如在佛罗伦萨人羁绊下百年后的皮萨一样，人们遇有任何不测之事就立即想起它们。
 
-斯巴达人和罗马人就是两个例子①。斯巴达人依靠在当地建立一个寡头政府来控制雅典和底比斯；但是结果仍然失掉雅典和底比斯。罗马人为着保有卡普阿②、迦太基③和努曼齐阿④，把它们毁灭了，就没有失去它们。可是罗马人想同斯巴达人那样保有希腊，让它享有自由并且允许它的法律存在，他们却没有获得成功。因此，他们为着保有希腊，不得不把那个地区的许多城市加以破坏。因为要稳固地占有它们，除了毁灭它们之外，确实没有别的办法。从而任何人一旦成为一个城市的主子，如果这个城市原来习惯于自由的生活，而他不把这个城市消灭，他就是坐待它把自己消灭。因为这个城市在叛乱的时候，总是利用自由的名义和它的古老的秩序作为借口。而这两者尽管经过悠久的岁月或者施恩授惠都不能够使人们忘怀。除非将那里的居民弄得四分五裂或者东离西散，否则无论你怎么办或者怎样预防，他们还是永远不会忘掉那个名义和那种秩序的，正如在佛罗伦萨人羁绊下百年后的皮萨一样，人们遇有任何不测之事就立即想起它们。
+斯巴达人和罗马人就是两个例子①。斯巴达人依靠在当地建立一个寡头政府来控制雅典和底比斯；但是结果仍然失掉雅典和底比斯。罗马人为保有卡普阿②、迦太基③和努曼齐阿④，把他们毁灭了，就没有失去它们。可是罗马人想同斯巴达人那样保有希腊，让它享有自由并且允许它的法律存在，他们却没有获得成功。因此，他们为保有希腊，不得不破坏那个地区的许多城市。因为要稳固地占有它们，除了毁灭它们之外，确实没有别的办法。任何人一旦成为一个城市的主子，如果这个城市原来习惯于自由的生活，而他不把这个城市消灭，他就是坐待它把自己消灭。因为这个城市在叛乱的时候，总是利用自由的名义和它的古老的秩序作为借口。而这两者尽管经过悠久的岁月或者施恩授惠都不能够使人们忘怀。除非将那里的居民弄得四分五裂或者东离西散，否则无论你怎么办或者怎样预防，他们还是永远不会忘掉那个名义和那种秩序的，正如在佛罗伦萨人羁绊下百年后的皮萨一样，人们遇有任何不测之事就立即想起它们。
 
 > ①此处指公元前斯巴达在战胜雅典的伯罗奔尼撒战争后的各国历史情况。当时雅典建立了所谓“三十专制者”的政府，这些专制者很快就被特拉西布洛(Trasibulo)在公元前403年搞掉。斯巴达人在公元前382年占领底比斯之后又采取同样方法，但是在公元前379年回到底比斯故国的贝洛皮达斯(Pelopidas)把十名专制者搞掉了。
 
