--- a/22 论臣.md
+++ b/22 论臣.md
@@ -2,7 +2,7 @@
 
 论君主的大臣
 
-通选大臣，对于君主说来实在是一件重大的事情；他们是否良臣，取决于君主的明智。人们对于一位君主及其能力的第一个印象，就是通过对他左右的人们的观察得来的，如果左右的人们是有能力的而且是忠诚的，他就常常能够被认为是明智的，因为他已经知道怎样认识他们的能力并且使他们忠贞不渝。但是如果他们不是这样的人，人们就往往会对他作出不好的判断，因为他所犯的第一个错误就是出在此项选择上。
+通选大臣，对于君主说来实在是一件重大的事情；他们是否良臣，取决于君主的明智。人们对于一位君主及其能力的第一个印像，就是通过对他左右的人们的观察得来的，如果左右的人们是有能力的而且是忠诚的，他就常常能够被认为是明智的，因为他已经知道怎样认识他们的能力并且使他们忠贞不渝。但是如果他们不是这样的人，人们就往往会对他作出不好的判断，因为他所犯的第一个错误就是出在此项选择上。
 
 凡是知道安托尼奥·达·韦纳弗罗①是锡耶纳君主潘多尔福·佩特鲁奇的大臣的人，无不认定潘多尔福是一位最卓越的人，因为他把此人作为自己的大臣。因为人的头脑有三类：一类是靠自己就能够理解，另一类是它能够辨别别人所说明的事情，第三类是既不能自己理解，也不能理解别人的说明。第一类是最优秀的，第二类也是优秀的，第三类则是无用的。因此，这样说必然是合适的：如果潘多尔福不属于第一类，他就属于第二类，因为任何人尽管自己缺乏创见，但是如果对于他人的言行是好是坏具有鉴别力，他就能够识别他的大臣的作为的善恶；他激励后者，矫正前者；大臣就不敢指望蒙骗他，而保持良善。
 
