--- a/02 世袭君主国.md
+++ b/02 世袭君主国.md
@@ -14,6 +14,8 @@
 
 > 而且革新的记忆与原因，由于统治已经年代久远并且连绵不断而消失了；因为一次变革总是为另一次变革留下可以继续进行的条件的。 (@todo 未明白)
 
+@todo 每次变革总会给一部分人带来满意，而又给一部分人不满意，所以就为下次的革命留下了引子。
+
 > ②费拉拉公爵(ducadiFerrara)，指在教皇辖地费拉拉执政的埃斯特家族的埃尔科莱一世(Ercoleld’Este，在位：1471—1505)和阿尔方索一世(AlfonsoⅠd’Este，在位：1505—1534)。这个家族从1208年起就同萨林圭拉家族(Salinguerra)轮流统治费拉拉。1332年教皇承认埃斯特家族三兄弟为其在费拉拉的代理人，由是埃斯特家族统治者的势力日益强大。
 
 > ①朱利奥二世(IulioⅡ1413—1513)原名朱利亚诺·德拉·罗韦雷(IulianodellaRovelle)，1503年起任教皇至1513年，决心收复全部教皇辖地，除费拉拉公爵抵御了他的攻击外，一些处于教皇宗主权之下的小国的繁荣时代由此告终。
